testing/macro-tests/tests/ui/index_reserved_namespace.stderr
error: index name '~UiIndexedEntity|id' uses reserved '~' namespace
  --> tests/ui/index_reserved_namespace.rs:18:20
   |
18 |     index(fields = "id"),
   |                    ^^^^
